[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "steeramed-core"
version = "0.1.0"
description = "SteeraMed Core — Steerable Biomedical World Model for N-of-1 Intervention Reasoning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Jianghui Xiong", email = "jianghui@deepome.com"},
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "matplotlib>=3.5",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "seaborn>=0.11"]

[tool.setuptools.packages.find]
where = ["."]
include = ["steeramed_core*"]

[tool.setuptools.package-data]
"steeramed_core.presets" = ["*.json", "example_patients/*.json"]
